# ai-intelligence-os

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE-DECISION.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  api.py  models.py  registry.py  runtime.py
backend/app/analysis/: __init__.py  api.py  cli.py  models.py  ollama.py  service.py
backend/app/catalog/: __init__.py  api.py  identity.py  query.py  read_models.py  taxonomy.py
backend/app/db/: __init__.py  backup.py  connection.py  migration_repair.py  migrations.py
backend/app/discovery/: __init__.py  api.py  arxiv.py  cli.py  models.py  service.py
backend/app/documents/: __init__.py  api.py  cli.py  download.py  models.py  ocr.py  parser.py  service.py
backend/app/domain/: __init__.py  models.py  repositories.py
backend/app/ingestion/: __init__.py  contracts.py  demo.py  http.py  registry.py  runner.py  storage.py
backend/app/intelligence/: __init__.py  api.py  evaluation.py  golden_v1.json  human_review_v1.json  models.py  service.py
backend/app/multisource/: __init__.py  api.py  models.py  service.py
backend/app/operations/: api.py  (+6 more)
backend/tests/: test_agents.py  test_arxiv_connector.py  test_arxiv_ingestion.py  test_catalog_api.py  test_catalog_identity.py  test_config.py  test_database.py  test_discovery.py  test_documents_ranking.py  test_health.py  test_ingestion_http.py  test_ingestion_runner.py  test_local_analysis.py  test_multisource.py  test_operations.py  test_repositories.py  test_topic_taxonomy.py
(+97 files in other folders)
