[project]
name = "ai-intelligence-os-backend"
version = "0.1.0"
description = "Local-first AI Intelligence OS backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pymupdf>=1.26.0,<2.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400,<2.0.0",
    "pytest>=8.4.0,<9.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
artifacts = ["app/db/migrations/*.sql"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
